# UniUI

./: .gitignore  LICENSE  README.md  hello.py  notebook.ipynb  pyproject.toml  quick_start.py
.github/workflows/: ci.yml
docs/: architecture.md
src/uniui/: __init__.py  core.py  display.py  jupyter.py  qt.py  strategies.py  theme.py  tk.py  wx.py
tests/: calculator.py  conftest.py  contract_framework.py  credit_card.py  demo_api.py  smoke_test.py  test_ui.py
tests/contracts/: test_label.py  test_lineedit.py
tools/: is_notebook.py  utility.py
