[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "uniui"
version = "0.6.0"  # Step 3: Engineering and Extension Mechanisms
description = "Universal UI Framework - Write once, run anywhere (Qt, Jupyter, wxPython, Tkinter)"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "UniUI Contributors"}
]
keywords = ["ui", "gui", "qt", "jupyter", "wxpython", "tkinter", "cross-platform"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: User Interfaces",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = []

[project.optional-dependencies]
qt = ["PySide2>=5.15.0"]
jupyter = ["ipywidgets>=7.6.0"]
wx = ["wxPython>=4.0.0"]
all = ["PySide2>=5.15.0", "ipywidgets>=7.6.0", "wxPython>=4.0.0"]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=3.0.0",
    "pytest-xdist>=3.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "black>=22.0.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/uniui"
Documentation = "https://github.com/yourusername/uniui/docs"
Repository = "https://github.com/yourusername/uniui.git"
Changelog = "https://github.com/yourusername/uniui/blob/main/CHANGELOG.md"
"Bug Tracker" = "https://github.com/yourusername/uniui/issues"

[tool.setuptools]
packages = ["uniui"]
package-dir = {"uniui" = "src/uniui"}

[tool.setuptools.package-data]
uniui = ["py.typed"]

# ============================================================================
# Ruff Configuration (Linting + Formatting)
# ============================================================================

[tool.ruff]
line-length = 100
target-version = "py38"
src = ["src/uniui", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # function calls in argument defaults
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "F403"]  # Allow unused imports
"tests/**/*.py" = ["ARG001"]  # Allow unused arguments in tests

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# ============================================================================
# Mypy Configuration (Type Checking)
# ============================================================================

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false  # Gradual typing
ignore_missing_imports = true
strict_optional = true

[[tool.mypy.overrides]]
module = "tests.*"
ignore_errors = true

# ============================================================================
# Pytest Configuration
# ============================================================================

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--cov=src/uniui",
    "--cov-report=term-missing",
    "--cov-report=html",
    "-ra",
]

markers = [
    "contract: Contract tests ensuring consistent behavior across platforms",
    "qt: Tests requiring Qt/PySide2",
    "jupyter: Tests requiring ipywidgets",
    "wx: Tests requiring wxPython",
    "tk: Tests requiring Tkinter",
    "slow: Slow tests",
]

[tool.coverage.run]
source = ["src/uniui"]
omit = [
    "*/tests/*",
    "*/conftest.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]
